--- a/GNN_models/trash.ipynb
+++ b/GNN_models/trash.ipynb
@@ -421,14 +421,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Importance: tensor([[ 1.2275e-02, -4.3866e-04, -2.3747e-03,  5.9961e-06, -1.8322e-02,\n",
+      "          6.7758e-03, -3.3756e-03,  3.3045e-03, -4.1410e-04, -4.7517e-03,\n",
+      "          6.5441e-03,  1.1756e-04,  8.9861e-03, -6.2483e-03, -2.0754e-04],\n",
+      "        [ 9.7265e-04, -4.1853e-04,  8.4249e-04, -4.1004e-04, -1.3501e-03,\n",
+      "         -2.3933e-04, -1.1280e-03, -7.0684e-04,  3.6807e-04, -7.3343e-04,\n",
+      "          6.7297e-04,  1.7970e-05,  6.3480e-04, -1.7746e-04, -7.7775e-04],\n",
+      "        [ 7.6379e-04, -4.1705e-04,  5.0388e-03,  9.4725e-03,  1.3427e-03,\n",
+      "         -3.9083e-03, -7.4786e-04, -9.5126e-03,  2.7012e-03, -1.3322e-02,\n",
+      "         -2.7063e-03, -5.9831e-03, -1.0255e-02,  6.4585e-03, -2.2670e-03],\n",
+      "        [ 2.3280e-02, -1.9069e-03,  1.2953e-02, -1.7481e-03, -2.7319e-03,\n",
+      "          2.4886e-02, -1.2913e-02,  4.1282e-04, -2.1938e-02,  1.2066e-02,\n",
+      "          9.2277e-03,  1.7172e-02,  2.6745e-02, -1.2474e-02, -8.2982e-03],\n",
+      "        [ 7.0498e-03, -1.2809e-03, -4.0443e-03,  5.3280e-03, -1.0616e-03,\n",
+      "          5.3567e-03, -1.1408e-02,  4.7099e-03,  2.3087e-03, -2.3428e-03,\n",
+      "         -3.9236e-03,  3.3648e-03,  1.6152e-02, -1.9746e-03, -3.1419e-03],\n",
+      "        [ 2.0292e-03,  1.5952e-04, -1.1887e-03,  5.4479e-04, -5.4863e-04,\n",
+      "          1.9303e-03, -1.4612e-03,  2.2287e-03, -1.4091e-03,  4.1199e-04,\n",
+      "         -7.8360e-04,  9.2731e-04,  2.3172e-03, -7.5774e-04, -1.5543e-03],\n",
+      "        [ 8.9949e-03,  8.8533e-04, -2.1451e-03,  7.0428e-03,  4.7685e-03,\n",
+      "          5.8864e-03, -6.4042e-03,  3.9720e-03, -5.3514e-03, -1.2071e-03,\n",
+      "         -1.4672e-03,  4.7018e-03,  7.4761e-03, -1.3038e-03, -1.2246e-02],\n",
+      "        [-6.6790e-03, -4.5793e-03, -1.3295e-02, -4.9643e-04,  9.9808e-03,\n",
+      "         -1.7760e-02,  3.9535e-03, -3.5023e-03,  1.9258e-02, -1.2740e-03,\n",
+      "          2.0336e-03, -5.7606e-03, -5.5823e-03, -3.2434e-03,  1.3776e-03],\n",
+      "        [-4.9399e-03, -3.0927e-03,  3.5786e-03, -3.8228e-03,  1.2745e-03,\n",
+      "         -5.3330e-03, -1.1231e-03, -2.8851e-03,  4.4198e-03,  7.0476e-04,\n",
+      "         -2.8511e-03, -1.5016e-03, -4.2478e-03,  4.3503e-03,  5.4290e-03],\n",
+      "        [-1.1208e-03, -3.3793e-05,  3.4144e-04, -5.5016e-04,  1.5730e-04,\n",
+      "         -6.2237e-04,  6.3486e-04, -3.7564e-04,  4.7872e-04,  3.7283e-04,\n",
+      "         -6.9144e-07, -2.4358e-04, -8.4744e-04, -1.0327e-04,  7.2700e-04],\n",
+      "        [ 7.5913e-03, -3.6760e-04,  2.5405e-04,  1.4391e-02, -7.0900e-03,\n",
+      "          9.2784e-03, -2.1551e-03,  1.4613e-02, -8.1834e-03, -8.6680e-03,\n",
+      "         -6.1243e-03, -1.5186e-04,  2.0315e-02, -8.2295e-03, -1.3247e-02],\n",
+      "        [-3.6148e-04,  1.8751e-04, -7.9749e-05, -1.9293e-04, -9.9177e-05,\n",
+      "         -3.3470e-04,  4.6496e-05,  3.7124e-05,  3.1666e-04,  4.6569e-04,\n",
+      "         -2.0883e-04,  3.1561e-05, -4.3384e-04, -5.1910e-05,  5.3931e-04],\n",
+      "        [ 5.4399e-03,  3.3108e-03, -5.0663e-03, -1.5073e-04,  1.5731e-03,\n",
+      "          1.9585e-03, -1.6530e-03,  2.5281e-03, -2.4772e-03,  1.0186e-03,\n",
+      "         -4.4670e-04,  1.4380e-03,  1.3553e-03, -2.0077e-04,  1.7682e-03],\n",
+      "        [-3.7684e-04,  1.4193e-03,  2.0130e-03,  8.5876e-04, -2.0750e-03,\n",
+      "          4.1714e-03, -2.5274e-04,  3.3690e-03, -3.6807e-03, -1.2927e-03,\n",
+      "          5.9008e-06,  5.0497e-04,  2.1869e-03, -2.3429e-03, -2.2337e-03],\n",
+      "        [-1.8282e-02,  9.8750e-03,  9.4390e-03, -6.5219e-03, -4.1733e-03,\n",
+      "         -9.3553e-03,  1.7525e-02, -2.4783e-03, -9.8174e-03,  1.2298e-02,\n",
+      "          1.1746e-02,  1.1692e-03, -1.3515e-02,  7.1292e-03,  1.6060e-02],\n",
+      "        [ 1.7786e-03, -1.1181e-03,  9.1284e-05, -3.2955e-04, -1.9153e-03,\n",
+      "         -1.1905e-03, -1.4411e-03, -2.0828e-04,  9.0699e-04, -1.7265e-03,\n",
+      "         -5.3761e-04,  5.5327e-04,  2.0214e-03, -4.0939e-04, -2.7614e-04],\n",
+      "        [ 1.0221e-02, -3.5139e-03, -2.9626e-03,  6.8862e-03, -1.3246e-02,\n",
+      "          2.3670e-03, -5.1162e-03,  3.1607e-03, -4.1904e-03, -1.3504e-02,\n",
+      "         -1.6872e-03,  2.1691e-03,  2.1273e-02, -2.9301e-03, -1.5891e-02],\n",
+      "        [ 5.3006e-03,  1.3953e-03, -1.4417e-03,  1.0278e-03,  2.5639e-05,\n",
+      "          2.8371e-03,  3.2918e-04, -9.2075e-04, -1.7274e-03, -5.2760e-04,\n",
+      "          1.0792e-03, -1.3019e-04, -1.2930e-04,  7.9166e-05,  2.3511e-04],\n",
+      "        [-1.0612e-02, -2.1024e-02,  5.7821e-03, -2.2025e-02,  1.7100e-03,\n",
+      "         -3.3466e-02, -1.3780e-02, -1.8313e-02,  2.8295e-02,  7.7237e-03,\n",
+      "         -1.3175e-02, -1.3969e-02, -1.6624e-02,  1.2225e-02,  2.6744e-02],\n",
+      "        [ 3.8612e-03,  2.0107e-03,  1.6856e-03, -3.5960e-04, -1.3485e-02,\n",
+      "          9.4410e-03,  1.2272e-03,  6.6000e-03, -5.0133e-03, -5.0718e-03,\n",
+      "          4.1998e-03,  2.1863e-03,  4.9845e-03, -3.0835e-03, -3.4995e-03]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch_geometric.nn import GATConv\n",
+    "\n",
+    "# Define a simple GAT-based GNN model\n",
+    "class GATModel(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, num_heads):\n",
+    "        super(GATModel, self).__init__()\n",
+    "        self.conv1 = GATConv(input_size, hidden_size, heads=num_heads)\n",
+    "        self.conv2 = GATConv(hidden_size * num_heads, output_size, heads=1)\n",
+    "\n",
+    "    def forward(self, data):\n",
+    "        x, edge_index = data.x, data.edge_index\n",
+    "\n",
+    "        x = self.conv1(x, edge_index)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.conv2(x, edge_index)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "# Function to compute feature importance using gradient\n",
+    "def compute_feature_importance_gat(model, data, target):\n",
+    "    model.eval()\n",
+    "    data.x.requires_grad_(True)\n",
+    "\n",
+    "    optimizer = optim.SGD([data.x], lr=0.01)\n",
+    "    criterion = nn.MSELoss()\n",
+    "\n",
+    "    # Forward pass\n",
+    "    output = model(data)\n",
+    "    loss = criterion(output, target)\n",
+    "\n",
+    "    # Backward pass to compute gradients\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # Compute feature importance as the absolute gradient\n",
+    "    # feature_importance = torch.abs(data.x.grad)\n",
+    "    feature_importance = data.x.grad\n",
+    "\n",
+    "    return feature_importance\n",
+    "\n",
+    "# Example usage\n",
+    "# Assume your GNN model takes a graph as input, represented using the PyTorch Geometric data structure.\n",
+    "# Here, we use a simple example with a random graph.\n",
+    "\n",
+    "from torch_geometric.data import Data\n",
+    "input_size=15\n",
+    "output_size=1\n",
+    "hidden_size=64\n",
+    "# Generate a random graph\n",
+    "num_nodes = 20\n",
+    "num_edges = 15\n",
+    "data = Data(x=torch.randn((num_nodes, input_size), requires_grad=True),\n",
+    "            edge_index=torch.randint(0, num_nodes, (2, num_edges), dtype=torch.long),\n",
+    "            y=torch.randn((num_nodes, output_size)))\n",
+    "\n",
+    "# Initialize the GAT-based GNN model\n",
+    "gat_model = GATModel(input_size, hidden_size, output_size, num_heads=2)\n",
+    "\n",
+    "# Compute feature importance\n",
+    "feature_importance = compute_feature_importance_gat(gat_model, data, data.y)\n",
+    "\n",
+    "print(\"Feature Importance:\", feature_importance)\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-14T08:04:56.586341300Z",
+     "start_time": "2023-11-14T08:04:56.559131Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'torch.Tensor'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(feature_importance))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T08:04:57.054878800Z",
+     "start_time": "2023-11-14T08:04:57.038416500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([20, 15])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feature_importance.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-14T08:01:52.293875300Z",
+     "start_time": "2023-11-14T08:01:52.278989Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'GlobalStorage' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\storage.py:78\u001B[0m, in \u001B[0;36mBaseStorage.__getattr__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m     77\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m---> 78\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m[\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m]\u001B[49m\n\u001B[0;32m     79\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m:\n",
+      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\storage.py:103\u001B[0m, in \u001B[0;36mBaseStorage.__getitem__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m    102\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__getitem__\u001B[39m(\u001B[38;5;28mself\u001B[39m, key: \u001B[38;5;28mstr\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[1;32m--> 103\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_mapping\u001B[49m\u001B[43m[\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m]\u001B[49m\n",
+      "\u001B[1;31mKeyError\u001B[0m: 'shape'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[33], line 50\u001B[0m\n\u001B[0;32m     48\u001B[0m     \u001B[38;5;66;03m# Compute Shapley values for each node and feature\u001B[39;00m\n\u001B[0;32m     49\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m node_idx \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_nodes):\n\u001B[1;32m---> 50\u001B[0m         phi_values \u001B[38;5;241m=\u001B[39m \u001B[43mexplainer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshap_values\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnode_idx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmask\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     51\u001B[0m         shap_values[node_idx, feature_idx] \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mtensor(phi_values)\n\u001B[0;32m     53\u001B[0m \u001B[38;5;66;03m# Print Shapley values for each feature\u001B[39;00m\n",
+      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\shap\\explainers\\_permutation.py:210\u001B[0m, in \u001B[0;36mPermutation.shap_values\u001B[1;34m(self, X, npermutations, main_effects, error_bounds, batch_evals, silent)\u001B[0m\n\u001B[0;32m    185\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\" Legacy interface to estimate the SHAP values for a set of samples.\u001B[39;00m\n\u001B[0;32m    186\u001B[0m \n\u001B[0;32m    187\u001B[0m \u001B[38;5;124;03mParameters\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    206\u001B[0m \u001B[38;5;124;03m    of such matrices, one for each output.\u001B[39;00m\n\u001B[0;32m    207\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    208\u001B[0m warnings\u001B[38;5;241m.\u001B[39mwarn(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mshap_values() is deprecated; use __call__().\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;167;01mDeprecationWarning\u001B[39;00m)\n\u001B[1;32m--> 210\u001B[0m explanation \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m(X, max_evals\u001B[38;5;241m=\u001B[39mnpermutations \u001B[38;5;241m*\u001B[39m \u001B[43mX\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshape\u001B[49m[\u001B[38;5;241m1\u001B[39m], main_effects\u001B[38;5;241m=\u001B[39mmain_effects)\n\u001B[0;32m    211\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m explanation\u001B[38;5;241m.\u001B[39mvalues\n",
+      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\data.py:441\u001B[0m, in \u001B[0;36mData.__getattr__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m    435\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m_store\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__dict__\u001B[39m:\n\u001B[0;32m    436\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\n\u001B[0;32m    437\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mThe \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m object was created by an older version of PyG. \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    438\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIf this error occurred while loading an already existing \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    439\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdataset, remove the \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mprocessed/\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m directory in the dataset\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    440\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mroot folder and try again.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m--> 441\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_store\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\storage.py:80\u001B[0m, in \u001B[0;36mBaseStorage.__getattr__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m     78\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m[key]\n\u001B[0;32m     79\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m:\n\u001B[1;32m---> 80\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(\n\u001B[0;32m     81\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__class__\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m object has no attribute \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mkey\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'GlobalStorage' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch_geometric.nn import GATConv\n",
+    "from torch_geometric.data import Data\n",
+    "import shap\n",
+    "\n",
+    "# Define a simple GAT-based GNN model\n",
+    "class GATModel(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, num_heads):\n",
+    "        super(GATModel, self).__init__()\n",
+    "        self.conv1 = GATConv(input_size, hidden_size, heads=num_heads)\n",
+    "        self.conv2 = GATConv(hidden_size * num_heads, output_size, heads=1)\n",
+    "\n",
+    "    def forward(self, x, edge_index):\n",
+    "        x = self.conv1(x, edge_index)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.conv2(x, edge_index)\n",
+    "        return x\n",
+    "\n",
+    "# Create a sample graph\n",
+    "num_nodes = 10\n",
+    "num_edges = 15\n",
+    "input_size = 5\n",
+    "output_size = 1\n",
+    "data = Data(x=torch.randn((num_nodes, input_size), requires_grad=True),\n",
+    "            edge_index=torch.randint(0, num_nodes, (2, num_edges), dtype=torch.long),\n",
+    "            y=torch.randn((num_nodes, output_size)))\n",
+    "\n",
+    "# Initialize the GAT-based GNN model\n",
+    "gat_model = GATModel(input_size, hidden_size=16, output_size=output_size, num_heads=2)\n",
+    "\n",
+    "# Define a Shapley explainer with a callable function\n",
+    "def model_wrapper(input_data):\n",
+    "    return gat_model(input_data.x, input_data.edge_index)\n",
+    "\n",
+    "# Create the explainer\n",
+    "explainer = shap.Explainer(model_wrapper, data.x)\n",
+    "\n",
+    "# Initialize Shapley values\n",
+    "shap_values = torch.zeros_like(data.x)\n",
+    "\n",
+    "# Compute Shapley values for each feature\n",
+    "for feature_idx in range(input_size):\n",
+    "    # Create a mask with only one feature active\n",
+    "    mask = torch.zeros_like(data.x)\n",
+    "    mask[:, feature_idx] = 1\n",
+    "\n",
+    "    # Compute Shapley values for each node and feature\n",
+    "    for node_idx in range(num_nodes):\n",
+    "        phi_values = explainer.shap_values(data, node_idx, mask)\n",
+    "        shap_values[node_idx, feature_idx] = torch.tensor(phi_values)\n",
+    "\n",
+    "# Print Shapley values for each feature\n",
+    "print(\"Shapley Values:\", shap_values)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-15T03:14:11.142293500Z",
+     "start_time": "2023-11-15T03:14:11.042995400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
