--- a/GNN_models/trash.ipynb
+++ b/GNN_models/trash.ipynb
@@ -616,80 +616,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'GlobalStorage' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\storage.py:78\u001B[0m, in \u001B[0;36mBaseStorage.__getattr__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m     77\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m---> 78\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m[\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m]\u001B[49m\n\u001B[0;32m     79\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m:\n",
-      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\storage.py:103\u001B[0m, in \u001B[0;36mBaseStorage.__getitem__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m    102\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__getitem__\u001B[39m(\u001B[38;5;28mself\u001B[39m, key: \u001B[38;5;28mstr\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Any:\n\u001B[1;32m--> 103\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_mapping\u001B[49m\u001B[43m[\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m]\u001B[49m\n",
-      "\u001B[1;31mKeyError\u001B[0m: 'shape'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[33], line 50\u001B[0m\n\u001B[0;32m     48\u001B[0m     \u001B[38;5;66;03m# Compute Shapley values for each node and feature\u001B[39;00m\n\u001B[0;32m     49\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m node_idx \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_nodes):\n\u001B[1;32m---> 50\u001B[0m         phi_values \u001B[38;5;241m=\u001B[39m \u001B[43mexplainer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshap_values\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnode_idx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmask\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     51\u001B[0m         shap_values[node_idx, feature_idx] \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mtensor(phi_values)\n\u001B[0;32m     53\u001B[0m \u001B[38;5;66;03m# Print Shapley values for each feature\u001B[39;00m\n",
-      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\shap\\explainers\\_permutation.py:210\u001B[0m, in \u001B[0;36mPermutation.shap_values\u001B[1;34m(self, X, npermutations, main_effects, error_bounds, batch_evals, silent)\u001B[0m\n\u001B[0;32m    185\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\" Legacy interface to estimate the SHAP values for a set of samples.\u001B[39;00m\n\u001B[0;32m    186\u001B[0m \n\u001B[0;32m    187\u001B[0m \u001B[38;5;124;03mParameters\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    206\u001B[0m \u001B[38;5;124;03m    of such matrices, one for each output.\u001B[39;00m\n\u001B[0;32m    207\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    208\u001B[0m warnings\u001B[38;5;241m.\u001B[39mwarn(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mshap_values() is deprecated; use __call__().\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;167;01mDeprecationWarning\u001B[39;00m)\n\u001B[1;32m--> 210\u001B[0m explanation \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m(X, max_evals\u001B[38;5;241m=\u001B[39mnpermutations \u001B[38;5;241m*\u001B[39m \u001B[43mX\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshape\u001B[49m[\u001B[38;5;241m1\u001B[39m], main_effects\u001B[38;5;241m=\u001B[39mmain_effects)\n\u001B[0;32m    211\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m explanation\u001B[38;5;241m.\u001B[39mvalues\n",
-      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\data.py:441\u001B[0m, in \u001B[0;36mData.__getattr__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m    435\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m_store\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__dict__\u001B[39m:\n\u001B[0;32m    436\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\n\u001B[0;32m    437\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mThe \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m object was created by an older version of PyG. \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    438\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIf this error occurred while loading an already existing \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    439\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdataset, remove the \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mprocessed/\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m directory in the dataset\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    440\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mroot folder and try again.\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m--> 441\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mgetattr\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_store\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\miniconda3\\lib\\site-packages\\torch_geometric\\data\\storage.py:80\u001B[0m, in \u001B[0;36mBaseStorage.__getattr__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m     78\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m[key]\n\u001B[0;32m     79\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m:\n\u001B[1;32m---> 80\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mAttributeError\u001B[39;00m(\n\u001B[0;32m     81\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__class__\u001B[39m\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__name__\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m object has no attribute \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mkey\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'GlobalStorage' object has no attribute 'shape'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3508, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\bolou\\AppData\\Local\\Temp\\ipykernel_19068\\1474834421.py\", line 48, in <module>\n",
+      "    explainer = shap.DeepExplainer(model_predict, loader)\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\shap\\explainers\\_deep\\__init__.py\", line 84, in __init__\n",
+      "    self.explainer = TFDeep(model, data, session, learning_phase_flags)\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\shap\\explainers\\_deep\\deep_tf.py\", line 110, in __init__\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\shap\\explainers\\tf_utils.py\", line 69, in _get_model_inputs\n",
+      "AssertionError: <class 'function'> is not currently a supported model type!\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2105, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1396, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1287, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1140, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1055, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 955, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 778, in lines\n",
+      "    return self._sd.lines\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\stack_data\\core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\stack_data\\core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\stack_data\\core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"C:\\Users\\bolou\\miniconda3\\lib\\site-packages\\executing\\executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch_geometric.nn import GATConv\n",
-    "from torch_geometric.data import Data\n",
+    "from torch_geometric.data import Data, DataLoader\n",
+    "from torch_geometric.nn import GCNConv\n",
+    "import torch.optim as optim\n",
     "import shap\n",
     "\n",
-    "# Define a simple GAT-based GNN model\n",
-    "class GATModel(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, output_size, num_heads):\n",
-    "        super(GATModel, self).__init__()\n",
-    "        self.conv1 = GATConv(input_size, hidden_size, heads=num_heads)\n",
-    "        self.conv2 = GATConv(hidden_size * num_heads, output_size, heads=1)\n",
+    "# Define a simple PyTorch GNN model for graph regression with GCNConv\n",
+    "class SimpleGNN(nn.Module):\n",
+    "    def __init__(self, in_feats, hidden_size, out_feats):\n",
+    "        super(SimpleGNN, self).__init__()\n",
+    "        self.conv1 = GCNConv(in_feats, hidden_size)\n",
+    "        self.conv2 = GCNConv(hidden_size, out_feats)\n",
     "\n",
-    "    def forward(self, x, edge_index):\n",
-    "        x = self.conv1(x, edge_index)\n",
-    "        x = torch.relu(x)\n",
+    "    def forward(self, data):\n",
+    "        x, edge_index = data.x, data.edge_index\n",
+    "        x = torch.relu(self.conv1(x, edge_index))\n",
     "        x = self.conv2(x, edge_index)\n",
     "        return x\n",
     "\n",
-    "# Create a sample graph\n",
-    "num_nodes = 10\n",
-    "num_edges = 15\n",
-    "input_size = 5\n",
-    "output_size = 1\n",
-    "data = Data(x=torch.randn((num_nodes, input_size), requires_grad=True),\n",
-    "            edge_index=torch.randint(0, num_nodes, (2, num_edges), dtype=torch.long),\n",
-    "            y=torch.randn((num_nodes, output_size)))\n",
+    "# Create a dummy graph dataset\n",
+    "# Note: In a real-world scenario, you would load your dataset using PyG's available datasets.\n",
+    "x = torch.randn((5, 1))  # Node features (5 nodes, 1 feature per node)\n",
+    "edge_index = torch.tensor([[0, 1, 1, 2, 2, 3, 3, 4], [1, 0, 2, 1, 3, 2, 4, 3]], dtype=torch.long)\n",
+    "y = torch.randn((5, 1))  # Target values (regression task)\n",
     "\n",
-    "# Initialize the GAT-based GNN model\n",
-    "gat_model = GATModel(input_size, hidden_size=16, output_size=output_size, num_heads=2)\n",
+    "data = Data(x=x, edge_index=edge_index, y=y)\n",
     "\n",
-    "# Define a Shapley explainer with a callable function\n",
-    "def model_wrapper(input_data):\n",
-    "    return gat_model(input_data.x, input_data.edge_index)\n",
+    "# Create a DataLoader\n",
+    "loader = DataLoader([data], batch_size=1, shuffle=False)\n",
     "\n",
-    "# Create the explainer\n",
-    "explainer = shap.Explainer(model_wrapper, data.x)\n",
+    "# Create a simple GNN model with GCNConv\n",
+    "model = SimpleGNN(in_feats=1, hidden_size=16, out_feats=1)\n",
     "\n",
-    "# Initialize Shapley values\n",
-    "shap_values = torch.zeros_like(data.x)\n",
+    "# Set the device\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model.to(device)\n",
+    "data = data.to(device)\n",
     "\n",
-    "# Compute Shapley values for each feature\n",
-    "for feature_idx in range(input_size):\n",
-    "    # Create a mask with only one feature active\n",
-    "    mask = torch.zeros_like(data.x)\n",
-    "    mask[:, feature_idx] = 1\n",
+    "# Define a function for the GNN model\n",
+    "def model_predict(data):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        predictions = model(data)\n",
+    "    return predictions.cpu().numpy()\n",
     "\n",
-    "    # Compute Shapley values for each node and feature\n",
-    "    for node_idx in range(num_nodes):\n",
-    "        phi_values = explainer.shap_values(data, node_idx, mask)\n",
-    "        shap_values[node_idx, feature_idx] = torch.tensor(phi_values)\n",
+    "# Wrap the model_predict function with a shap.DeepExplainer\n",
+    "explainer = shap.DeepExplainer(model_predict, loader)\n",
+    "\n",
+    "# Get Shapley values for a specific data point\n",
+    "shap_values = explainer.shap_values(data)\n",
     "\n",
     "# Print Shapley values for each feature\n",
     "print(\"Shapley Values:\", shap_values)\n"
@@ -697,8 +734,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-15T03:14:11.142293500Z",
-     "start_time": "2023-11-15T03:14:11.042995400Z"
+     "end_time": "2023-12-07T06:10:52.811355900Z",
+     "start_time": "2023-12-07T06:10:52.749280700Z"
     }
    }
   },
