--- a/GNN_models/trash.ipynb
+++ b/GNN_models/trash.ipynb
@@ -1293,8 +1293,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "from torch_geometric.datasets import Planetoid\n",
-    "dataset2 = Planetoid(root='/tmp/Cora', name='Cora')"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -1322,27 +1321,153 @@
   },
   {
    "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from torch_geometric.datasets import Coauthor, Amazon\n",
+    "from torch_geometric.datasets import Planetoid"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-18T11:22:28.748978800Z",
+     "start_time": "2024-02-18T11:22:28.389629900Z"
+    }
+   },
+   "execution_count": 13
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://github.com/shchur/gnn-benchmark/raw/master/data/npz/ms_academic_cs.npz\n",
+      "Processing...\n",
+      "Done!\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.x\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.tx\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.allx\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.y\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.ty\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.ally\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.graph\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.test.index\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "CS=Coauthor(root=\"../data/test\",name=\"CS\")[0]\n",
+    "cora=Planetoid(root=\"../data/test\",name=\"Cora\")[0]\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-18T12:48:44.656699700Z",
+     "start_time": "2024-02-18T12:47:43.660312100Z"
+    }
+   },
+   "execution_count": 66
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data object with masks:\n",
+      "Data(x=[18333, 6805], edge_index=[2, 163788], y=[18333], train_mask=[18333], val_mask=[18333], test_mask=[18333])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch_geometric.transforms import RandomNodeSplit\n",
+    "\n",
+    "# Define the sizes for each split\n",
+    "train_size = 20\n",
+    "val_size = 500\n",
+    "test_size = 1000\n",
+    "\n",
+    "# Create the transform\n",
+    "transform = RandomNodeSplit(split=\"random\", num_train_per_class=20, num_val=500,num_test=1000)\n",
+    "data = transform(CS)\n",
+    "\n",
+    "# Output the modified data object\n",
+    "print(\"Data object with masks:\")\n",
+    "print(data)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-18T12:52:51.055956100Z",
+     "start_time": "2024-02-18T12:52:51.025275200Z"
+    }
+   },
+   "execution_count": 68
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=0\n",
+    "for el in data.train_mask:\n",
+    "    if el.item()==True:\n",
+    "        f+=1\n",
+    "print(f)\n",
+    "        "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-18T12:52:59.960464500Z",
+     "start_time": "2024-02-18T12:52:59.826807300Z"
+    }
+   },
+   "execution_count": 70
+  },
+  {
+   "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "Data(x=[2708, 1433], edge_index=[2, 10556], y=[2708], train_mask=[2708], val_mask=[2708], test_mask=[2708])"
+      "text/plain": "mappingproxy({'__module__': 'torch_geometric.loader.cluster',\n              '__doc__': 'Clusters/partitions a graph data object into multiple subgraphs, as\\n    motivated by the `\"Cluster-GCN: An Efficient Algorithm for Training Deep\\n    and Large Graph Convolutional Networks\"\\n    <https://arxiv.org/abs/1905.07953>`_ paper.\\n\\n    .. note::\\n        The underlying METIS algorithm requires undirected graphs as input.\\n\\n    Args:\\n        data (torch_geometric.data.Data): The graph data object.\\n        num_parts (int): The number of partitions.\\n        recursive (bool, optional): If set to :obj:`True`, will use multilevel\\n            recursive bisection instead of multilevel k-way partitioning.\\n            (default: :obj:`False`)\\n        save_dir (str, optional): If set, will save the partitioned data to the\\n            :obj:`save_dir` directory for faster re-use. (default: :obj:`None`)\\n        log (bool, optional): If set to :obj:`False`, will not log any\\n            progress. (default: :obj:`True`)\\n        keep_inter_cluster_edges (bool, optional): If set to :obj:`True`,\\n            will keep inter-cluster edge connections. (default: :obj:`False`)\\n    ',\n              '__init__': <function torch_geometric.loader.cluster.ClusterData.__init__(self, data, num_parts: int, recursive: bool = False, save_dir: Union[str, NoneType] = None, log: bool = True, keep_inter_cluster_edges: bool = False)>,\n              '_metis': <function torch_geometric.loader.cluster.ClusterData._metis(self, edge_index: torch.Tensor, num_nodes: int) -> torch.Tensor>,\n              '_partition': <function torch_geometric.loader.cluster.ClusterData._partition(self, edge_index: torch.Tensor, cluster: torch.Tensor) -> torch_geometric.loader.cluster.Partition>,\n              '_permute_data': <function torch_geometric.loader.cluster.ClusterData._permute_data(self, data: torch_geometric.data.data.Data, partition: torch_geometric.loader.cluster.Partition) -> torch_geometric.data.data.Data>,\n              '__len__': <function torch_geometric.loader.cluster.ClusterData.__len__(self) -> int>,\n              '__getitem__': <function torch_geometric.loader.cluster.ClusterData.__getitem__(self, idx: int) -> torch_geometric.data.data.Data>,\n              '__repr__': <function torch_geometric.loader.cluster.ClusterData.__repr__(self) -> str>,\n              '__parameters__': ()})"
      },
-     "execution_count": 9,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data2"
+    "from torch_geometric.loader import DataLoader,ClusterLoader, ClusterData\n",
+    "vars(ClusterData)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T04:49:22.067658400Z",
-     "start_time": "2024-02-17T04:49:22.054658700Z"
+     "end_time": "2024-02-18T15:26:36.525777100Z",
+     "start_time": "2024-02-18T15:26:36.499776500Z"
     }
    },
-   "execution_count": 9
+   "execution_count": 73
   },
   {
    "cell_type": "code",
