--- a/GNN_models/trash.ipynb
+++ b/GNN_models/trash.ipynb
@@ -1471,6 +1471,98 @@
   },
   {
    "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/new_data/cornell/out1_node_feature_label.txt\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/new_data/cornell/out1_graph_edges.txt\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_0.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_1.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_2.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_3.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_4.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_5.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_6.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_7.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_8.npz\n",
+      "Downloading https://raw.githubusercontent.com/graphdml-uiuc-jlu/geom-gcn/master/splits/cornell_split_0.6_0.2_9.npz\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch_geometric.datasets import WebKB\n",
+    "dataset=WebKB(root=\"../data/WebKB\", name=\"Cornell\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-27T06:48:08.348157400Z",
+     "start_time": "2024-02-27T06:48:00.225777700Z"
+    }
+   },
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "data=dataset[0]\n",
+    "dataset.num_classes\n",
+    "import torch"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-27T06:50:39.042500Z",
+     "start_time": "2024-02-27T06:50:39.018170Z"
+    }
+   },
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 38, 1: 16, 2: 30, 3: 82, 4: 17}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def count_nodes_per_class(data):\n",
+    "    # Extract the class labels from the data object\n",
+    "    class_labels = data.y\n",
+    "\n",
+    "    # Use torch.unique to get unique class labels and their counts\n",
+    "    unique_classes, class_counts = torch.unique(class_labels, return_counts=True)\n",
+    "\n",
+    "    # Create a dictionary to store the counts for each class\n",
+    "    class_count_dict = {int(unique_class): int(count) for unique_class, count in zip(unique_classes, class_counts)}\n",
+    "\n",
+    "    return class_count_dict\n",
+    "\n",
+    "\n",
+    "class_counts = count_nodes_per_class(data)\n",
+    "print(class_counts)    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-27T06:56:44.690956400Z",
+     "start_time": "2024-02-27T06:56:44.649398900Z"
+    }
+   },
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
